--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.10.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6"
   }
 }
